# avakas

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
avakas/: avakas.py  cli.py
avakas/flavors/: __init__.py  python_pep621.py  python_pyproject_toml.py
tests/integration/: helper.bash  python_pep621.bats
tests/integration/fixtures/pyproject.toml/: poetry.toml  setuptools.toml  vanilla.toml
